--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.common.js",
     "start": "webpack-dev-server --config webpack.common.js --open --hot",
+    "start-server": "cd server/ && npm run start",
+    "start-project": "npm run start && npm run start-server",
     "lint": "./node_modules/.bin/eslint src",
     "lint-fixup": "./node_modules/.bin/eslint src --ext .js,.jsx --fix"
   },
@@ -30,6 +32,7 @@
     "file-loader": "^5.0.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "json-loader": "^0.5.7",
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.1",
@@ -37,14 +40,26 @@
     "typescript": "^3.7.3"
   },
   "dependencies": {
+    "@types/react": "^16.9.14",
+    "@types/react-dom": "^16.9.4",
     "antd": "^3.26.0",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.4.1",
     "i18next": "^19.0.1",
     "i18next-browser-languagedetector": "^4.0.1",
     "i18next-xhr-backend": "^3.2.2",
+    "lodash": "^4.17.15",
+    "numeral": "^2.0.6",
     "react": "^16.12.0",
+    "react-contenteditable": "^3.3.2",
     "react-dom": "^16.12.0",
     "react-i18next": "^11.2.5",
+    "react-minimal-pie-chart": "^6.0.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
+    "redux": "^4.0.4",
+    "redux-saga": "^1.1.3",
+    "styled-components": "^5.0.0-rc.2",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
