--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,30 @@
 {
-    "compilerOptions": {
-      "sourceMap": true,
-      "outDir": "./dist/",
-      "noImplicitAny": true,
-      "module": "es6",
-      "target": "es5",
-      "jsx": "react",
-      "allowJs": true
-    },
-    "typescript.tsc.autoDetect": "off"
+  "compilerOptions": {
+    "target": "es5",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "allowJs": true,
+    // "noEmit": true,
+    "noUnusedLocals": true,
+    "jsx": "react",
+    "lib": ["es2015", "dom", "esnext"],
+    "noImplicitAny": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "allowSyntheticDefaultImports": true,
+    "pretty": true,
+    "removeComments": false,
+    "skipLibCheck": true
+  },
+  "include": [
+    "**/typings.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.vue"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
