--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "redux": "^4.0.4",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.0.0-rc.2",
+    "tunnel": "0.0.6",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
